# fastapi-base

./: .coverage  .gitignore  Dockerfile  Makefile  docker-compose.yml  example.env  pyproject.toml
api/: db_config.py  main.py  routes_config.py
api/config/: __init__.py
api/models/: base.py
api/routers/: health.py
migrations/: env.py
tests/: test_health.py
