[tool.poetry]
name = "fastapi-base"
version = "0.1.0"
description = ""
authors = ["Jair Partida <j.partida@traxion.global>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
pytest = "^8.1.1"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
psycopg2-binary = "^2.9.9"
ruff = "^0.4.9"
pydantic-settings = "^2.3.3"
pydash = "^8.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
exclude = [
    "migrations/*",
]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "C4"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true